[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/skills/extinctionray_effect.png" type="Texture" id=1]
[ext_resource path="res://sprites/skills/extinctionray_charge.png" type="Texture" id=2]
[ext_resource path="res://scripts/skills/ExtinctionRay.gd" type="Script" id=3]
[ext_resource path="res://sound/fx/Sound/SoundFX/laser-gun-81720.mp3" type="AudioStream" id=4]
[ext_resource path="res://sound/fx/Sound/SoundFX/charging-machine-90403.mp3" type="AudioStream" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Charge"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../ExtinctionrayCharge:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../FX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../ExtinctionrayCharge:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Release"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "apply_hitbox"
}, {
"args": [  ],
"method": "wait_release_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("../FX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 1.42842,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 173.75, 24.25 )

[node name="ExtinctionRay" type="Node2D"]
script = ExtResource( 3 )

[node name="ExtinctionrayEffect" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.590849, 0.590849 )
texture = ExtResource( 1 )
offset = Vector2( 300, 0 )
hframes = 3
vframes = 4
frame = 1

[node name="ExtinctionrayCharge" type="Sprite" parent="."]
position = Vector2( 0, -11.0248 )
scale = Vector2( 0.140431, 0.140431 )
texture = ExtResource( 2 )
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ExtinctionrayEffect")
anims/Charge = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Release = SubResource( 1 )

[node name="HitboxAttack" type="Area2D" parent="."]
position = Vector2( 0, -4.02483 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxAttack"]
position = Vector2( 192.25, 0 )
shape = SubResource( 4 )

[node name="FX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[connection signal="body_entered" from="HitboxAttack" to="." method="_on_HitboxAttack_body_entered"]
[connection signal="body_exited" from="HitboxAttack" to="." method="_on_HitboxAttack_body_exited"]
